--- a/item/css/style.scss
+++ b/item/css/style.scss
@@ -18,18 +18,27 @@ h4 {font-size: 1.00rem;font-weight: bold;}
 h5 {font-size: 0.75rem;font-weight: bold;}
 p  {font-size: 1.00rem;font-weight: normal;}
 
+$black: #333;
+$gray: #ddd;
+$primary: #64A9FF;
 
-input::placeholder {
-  color: #ddd;
+input,textarea {
+  &::placeholder {
+    color: #ddd;
+  }
 }
   // IE
-input:-ms-input-placeholder {
-  color: #ddd;
+input,textarea {
+  &:-ms-input-placeholder {
+    color: #ddd;
+  }
 }
 
   // Edge
-input::-ms-input-placeholder {
-  color: #ddd;
+input,textarea {
+  &::-ms-input-placeholder {
+    color: #ddd;
+  }
 }
 
 /*------------------
@@ -38,16 +47,16 @@ input::-ms-input-placeholder {
 
 form {
   padding-top: 0;
+  max-width: 400px;
   ul {
     padding: 0 20px;
     margin: 0 auto;
-    max-width: 400px;
     li {
       margin: 20px 0;
       font-size: 1rem;
     }
   }
-  input[type="text"] {
+  input[type="text"],button,textarea {
     font-size: 1rem;
     margin-top: 10px;
     padding: 5px 15px;
@@ -59,6 +68,12 @@ form {
     display: block;
 
   }
+  button {
+    border: none;
+    width: 100px;
+    background-color: $primary;
+    color: white;
+  }
 }
 
 /*------------------
@@ -66,7 +81,7 @@ form {
 ------------------*/
 
 $md-radio-checked-color: rgb(51, 122, 183);
-$md-radio-border-color: rgba(0, 0, 0, 0.54);
+$md-radio-border-color: #ddd;
 $md-radio-size: 16px;
 $md-radio-checked-size: 10px;
 $md-radio-ripple-size: 10px;
@@ -91,7 +106,7 @@ $md-radio-ripple-size: 10px;
   input[type="radio"] {
     display: none;
     &:checked + label:before {
-      border-color: $md-radio-checked-color;
+      border-color: $primary;
       animation: ripple 0.2s linear forwards;
     }
     &:checked + label:after {
@@ -119,7 +134,7 @@ $md-radio-ripple-size: 10px;
       top: 0;
       width: $md-radio-size;
       height: $md-radio-size;
-      border: 2px solid $md-radio-border-color;
+      border: 2px solid $gray;
     }
     &:after {
       margin: auto 0;
@@ -128,7 +143,7 @@ $md-radio-ripple-size: 10px;
       width:$md-radio-checked-size;
       height:$md-radio-checked-size;
       transform: scale(0);
-      background:$md-radio-checked-color;
+      background:$primary;
     }
   }
 }
@@ -183,7 +198,7 @@ $md-radio-ripple-size: 10px;
         filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.1));
         border-radius: 5px;
         font-size: 0.5rem;
-        color: blue;
+        color: $primary;
       }
     }
     &.clicked {
@@ -215,7 +230,7 @@ $md-radio-ripple-size: 10px;
     li {
       font-size: 0.75rem;
       display: inline-block;
-      background-color: #4d74ff;
+      background-color: $primary;
       color: white;
       border-radius: 2px;
       padding: 5px 8px;
@@ -276,7 +291,7 @@ $md-radio-ripple-size: 10px;
   height: 48px;
   >ul >li:last-child {
     padding-bottom: 20px;
-    border-bottom: 1px solid #DDDDDD;
+    border-bottom: 1px solid $gray;
   }
   >ul li >.md-radio {
     margin-top: 10px;
@@ -293,19 +308,22 @@ $md-radio-ripple-size: 10px;
       input {
         display: none;
         &:checked + label {
-          background-color: #4d74ff;
+          background-color: $primary;
           color: white;
         }
       }
       label {
         font-size: 0.75rem;
         display: inline-block;
-        background-color: #ddd;
-        color: black;
+        background-color: #F2F2F2;
+        color: $black;
         border-radius: 2px;
         padding: 5px 8px;
       }
     }
+  }
+  >button {
+    margin-left: calc(100% - 120px);
   }
 }
 .search-icon.clicked + .search-form {
@@ -315,4 +333,54 @@ $md-radio-ripple-size: 10px;
   right: 0;
   width: 100%;
   height: 100vh;
+}
+
+/*------------------
+ ラジオボタン
+------------------*/
+.icon {
+  position: fixed;
+  bottom: 20px;
+  left: calc(50% - 24px);
+  width: 48px;
+  height: 48px;
+  background: $primary;
+  border-radius: 50%;
+  &::before, &::after {
+    position: absolute;
+    top: 23px;
+    left: 50%;
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 2px;
+    background-color: white;
+    transform: translateX(-50%);
+  }
+  &::after {
+    top: 50%;
+    left: 14px;
+    transform: rotate(90deg);
+  }
+  &.clicked {
+    transform: rotate(90deg);
+  }
+}
+
+
+.close-only >.close {
+  display: block;
+}
+
+.post-form {
+  @extend .search-form;
+  padding-top: 60px;
+  border-radius: 0;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  >.close {
+    display: block;
+  }
 }
